Fixed checkerboard btn and label spacing

--- a/site/web/app/themes/host/assets/css/main.css
+++ b/site/web/app/themes/host/assets/css/main.css
@@ -2741,7 +2741,7 @@ a.btn {
 
 .checkerboard-item__content .btn {
   display: block;
-  margin-top: 0.625rem;
+  margin-top: 0.625rem !important;
   white-space: nowrap;
 }
 
