--- a/site/web/app/themes/host/assets/sass/components/_checkerboard.scss
+++ b/site/web/app/themes/host/assets/sass/components/_checkerboard.scss
@@ -276,7 +276,7 @@ $col-7-bp: 1565px;
 
     .btn {
         display: block;
-        margin-top: rem(10);
+        margin-top: rem(10)!important;
         white-space: nowrap;
     }
 
